# dotfiles

./: .AGENTS.md  .aider.conf.yml  .aliases  .apt.tools  .bashrc  .bashrc.activate  .bootstrap  .brew.tools  .brew.up  .brewsetup.sh  .brewtools.sh  .brewtstrap  .dprint.json  .envvars  .gitconfig  .gitignore  .justfile  .listapt  .listbrew  .listcask  .mdformat.toml  .rumdl.toml  .soar.tools  .soar.up  .vars  .zshrc  .zshrc.activate  Brewfile  LICENSE.md  README  README.md  bootstrap.sh  dot_AGENTS.md  dot_Brewfile  dot_Rprofile  dot_aider.conf.yml  dot_bashrc  dot_gitconfig  dot_gitignore  dot_palette  (+9 more)
.config/: starship.toml
.gitalias/: a  clonetree  cma  dotfiles  exclude  genpr  ignore  ignore-template  just  key  lab-mirror  lab-remote  up
.githooks/: pre-commit
.github/: README.md
.tmux/: mappings.tmux
.vim/: plugs.vim
alacritty/: alacritty.yml
bash/: .bash_aliases  .bashrc  .profile  tools.txt  venv_dispatch.sh
conky/: conky.conf
cookiecutter/: .cookiecutterrc
cookiecutter/cookiecutter-pypackage-custom/{{cookiecutter.project_slug}}/: README.md  README.rst  pyproject.toml
cookiecutter/cookiecutter-pypackage-custom/{{cookiecutter.project_slug}}/docs/: conf.py
cookiecutter/cookiecutter-pypackage-custom/{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
cookiecutter/cookiecutter-pypackage-custom/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __main__.py  cli.py
dot_tmux/: executable_mappings.tmux  executable_options.tmux  executable_theme.tmux
dot_vim/: dot_gitignore  mappings.vim
git/: .gitconfig  (+1 more)
(+279 files in other folders)
